# bolao-charlao-copa-2026

./: .env.example  .gitignore  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  streamlit_app.py
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 850667bcae51_init_schema.py  a1b2c3d4e5f6_add_telefone_usuario.py
app/core/: config.py  db.py  logging.py  security.py  timezone.py
app/domain/: enums.py  models.py
app/repositories/: admin_log_repo.py  bet_repo.py  match_repo.py  user_repo.py
app/services/: admin_service.py  aposta_service.py  auth_service.py  bet_service.py  bracket_service.py  match_service.py  ranking_service.py  scoring_service.py  simulation_service.py  standings_service.py
app/ui/: helpers.py  session.py  theme.py
app/ui/views/: admin.py  ajuda.py  aposta_final.py  cadastro.py  comparar.py  login.py  minha_copa.py  palpites.py  pendente.py  perfil.py  ranking.py  tela_partida.py
data/: anexo_c_raw.txt  mapeamento_terceiros.csv  partidas_fase_grupos.csv  partidas_mata_mata.csv  selecoes.csv
scripts/: _common.py  criar_admin.py  processar_anexo_c.py  seed_partidas.py  seed_selecoes_grupos.py
tests/: test_bet_lock.py  test_bracket.py  test_scoring.py  test_standings.py
